Add home links to new and edit views

--- a/app/views/facebooks/edit.html.erb
+++ b/app/views/facebooks/edit.html.erb
@@ -1,3 +1,7 @@
+<p><%= link_to "Home", root_path %><p>
+<br>
 <center><h1>Edit Status<h1><center>
 
-  <%= render 'form' %>
+
+
+<%= render 'form' %>
