--- a/app/views/facebooks/index.html.erb
+++ b/app/views/facebooks/index.html.erb
@@ -12,7 +12,7 @@
   <tbody>
     <% @facebooks.each do |facebook| %>
       <tr>
-      <td><%= facebook.status %></td>
+      <td><%= link_to facebook.status, facebook_path(facebook) %></td>
       <td><%= facebook.user %></td>
       <td><%= facebook.likes %></td>
       <td><%= link_to "Edit Status", edit_facebook_path(facebook) %></td>
