--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <a class="navbar-brand" href="/">Facebook</a>
+  <% if notice %>
+  <center><div class="alert alert-success"><%= notice %>
+  </div></center>
+
+  <% elsif alert %>
+  <center><div class="alert alert-danger"><%= alert %>
+  </div></center>
+  <% end %>
 
 <%= yield %>
 
